# Lab4---Compiladores

./: README.md
Lab4/: CMakeLists.txt  a.out  ast.cpp  ast.h  parser.cpp  parser.h  run_all_inputs.py  scanner.cpp  token.cpp  token.h  visitor.cpp  visitor.h
Lab4/inputs/: a.out
Lab4/outputs/: input_1.s
